<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="#F1F1F1"
    android:gravity="center">

    <!-- Titre -->
<TextView
android:id="@+id/tv_title"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/title"
android:textSize="24sp"
android:textStyle="bold"
android:textColor="#3F3F3F"
android:layout_marginBottom="24dp"
android:layout_gravity="center" />

    <!-- Champ de texte pour entrer un chiffre -->
<EditText
android:id="@+id/et_number"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:hint="@string/entrez_un_chiffre"
android:inputType="number"
android:padding="12dp"
android:textColor="#333333"
android:textSize="18sp"
android:background="@drawable/custom_edittext_background"
android:layout_marginBottom="16dp"/>

    <!-- Bouton de conversion -->
<Button
android:id="@+id/btn_convert"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:text="@string/convertir"
android:textColor="#FFFFFF"
android:background="@drawable/custom_button_background"
android:layout_marginBottom="24dp"
android:textSize="18sp"
android:padding="12dp" />

    <!-- Résultats -->
<TextView
android:id="@+id/tv_result_french"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/fr"
android:textSize="18sp"
android:textColor="#333333"
android:layout_marginBottom="8dp" />

<TextView
android:id="@+id/tv_result_english"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/en"
android:textSize="18sp"
android:textColor="#333333"
android:layout_marginBottom="8dp" />

<TextView
android:id="@+id/tv_result_maternal"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/other"
android:textSize="18sp"
android:textColor="#333333"
android:layout_marginBottom="16dp" />
    </LinearLayout>
